modif du readme

--- a/README
+++ b/README
@@ -5,3 +5,6 @@ http://souliss.github.com/jQuery-searchBox/
 
 Please submit bugs via:
 https://github.com/Souliss/jQuery-searchBox/issues
+
+
+Petite modif du readme
